<resources>
    <string name="app_name" translatable="false">AnnApp</string>
    <string name="share">Teilen</string>
    <string name="navigation_drawer_open">Navigation Drawer öffnen</string>
    <string name="navigation_drawer_close">Navigation Drawer schlißen</string>
    <string name="settings">Einstellungen</string>
    <string name="ratingExplanation">Die Wertung ist der Betrag, der das Verhältnis zu den anderen Noten des selben Types bestimmt.  z.B.: Wertung: 2 Die Note wird doppelt so stark einberechnet wie andere Noten. Wertung: 0,5 Die Note wird halb so stark einberechnet wie andere Noten.</string>
    <string name="addGrade">Note hinzufügen</string>
    <string name="warning">Achtung</string>
    <string name="warningMessage">Bitte füllen Sie alle notwendigen Felder aus!</string>
    <string name="grades">Noten</string>
    <string name="representationPlan">Vertretungsplan</string>
    <string name="Home">Home</string>
    <string name="tasks">Aufgaben</string>
    <string name="ratingList">"Wertung: "</string>
    <string name="editGrade">Note bearbeiten</string>
    <string name="editTask">Aufgabe bearbeiten</string>
    <string name="cancel">Abbrechen</string>
    <string name="deleteQuestion">Löschen?</string>
    <string name="deleteQuestionMessage">Wollen Sie diese Note wirklich löschen?</string>
    <string name="deleteQuestionMessageTask">Wollen Sie diese Aufgabe wirklich löschen?</string>
    <string name="deleteQuestionMessageEvent">Wollen Sie dieses Event wirklich löschen?</string>
    <string name="shareAnnApp">AnnApp teilen...</string>
    <string name="subjectName">Name des Fachs</string>
    <string name="ratingOfSubject">Wertung des Fachs</string>
    <string name="addSubject">Fach Hinzufügen</string>
    <string name="addTask">Aufgabe Hinzufügen</string>
    <string name="addGradeMessage">Bitte fügen sie eine neue Note hinzu!</string>
    <string name="addPermissionMessage">Bitte erteilen sie der App die Erlaubnis auf den Speicher des Geräts zuzugreifen!</string>
    <string name="WerMichFindetGriegtNen">Leuchtkeks</string>
    <string-array name="day_names">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </string-array>
    <string-array name="slide_headings">
        <item>Home</item>
        <item>Stundenplan</item>
        <item>Noten</item>
        <item>Noten hinzufügen</item>
        <item>Aufgaben</item>
        <item>Kalender</item>
        <item>Vertretungsplan</item>
        <item>AnnaNews</item>
        <item>Einstellungen</item>
    </string-array>
    <string-array name="slide_description">
        <item>Auf deinem Homescreen siehst du auf der rechten Seite alles, was du in deinen Fächern noch zu erledigen hast, auf der linken Seite welche Stunden du am heutigen Tag noch vor dir hast. Vorausgesetzt du trägst alles pflichtbewusst für jeden Tag ein.</item>
        <item>Hier kannst du deinen Stundenplan, den zugehörigen Lehrer zu jedem Fach und sogar den Raum für jede Stunde einzeln eintragen. Zusätzlich kannst du auch noch die Wertung der schriftlichen Noten im Vergleich zu den mündlichen Noten einstellen. Es ist wichtig, dass das Verhältnis stimmt, da es wichtig für die Berechnung deiner Gesamtnote ist.</item>
        <item>In diesem Bereich siehst du deinen Gesamtdurschnitt oben rechts. Weiter unten siehst du deinen Durschnitt in jedem Fach, sofern du genug Noten eingetragen hast. Mit einem Klick auf das jeweilige Fach kannst du auch die einzelnen, eingetragenen Noten inkl. Wertung einsehen.</item>
        <item>Mit einem Klick auf den Hinzufügen-Button unten rechts kannst du eine neue Note hinzufügen. Nachdem du das Fach ausgewählt hast, in dem du die Note bekommen hast kannst du noch unterscheiden zwischen mündlichen und schriftlichen Noten, als auch wie die Note im Fach speziell gewertet wird, bei Ratlosigkeit einfach auf das Fragezeichen am rechten Rand der Zeile tippen. Wenn du noch etwas zu dieser Note hinzufügen willst hast du auch noch die Möglichkeit eine kleine Notiz hinzuzufügen.</item>
        <item>Bei den Aufgaben kannst du sowohl Hausaufgaben, als auch Schulaufgaben und einfache Notizen für das jeweilige Fach eintragen. Diese erscheinen dann in deinem Homescreen unter dem jeweiligem Fach.</item>
        <item>Hier siehst du deinen Kalender, mit allen eingetragenen Schulterminen. Alternativ kannst du natürlich auch selbst einen neuen Termin mit Beschreibung, Ort und Enddatum/-zeit erstellen. Diese werden dir, wie die Schultermine dann im Kalender angezeigt. Bei einem Klick auf das Download-Symbol oben rechts wird der Schulkalender mit allen Terminen auf deinen Google Kalender übertragen.</item>
        <item>Hier siehst du den Vertretungsplan, sobald du die Zugangsdaten für DSBmobile eingegeben hast.</item>
        <item>Unser neues Feature, wo du alle News von unserer Schulhomepage und unserer Schülerzeitung direkt in der App sehen kannst.</item>
        <item>In den Einstellungen kannst du den Schulbeginn, sowie die Pausen- und Stundenlänge auswählen. Des Weiteren kannst du die maximale Stundenanzahl für einen Tag angeben. Wenn du deiner App einen neuen Look verpassen willst kannst du außerdem noch eines der vorgefertigten Farbschemen wählen!</item>
    </string-array>
    <string-array name="school_hours">
        <item>8.00-8.45</item>
        <item>8.45-9.30</item>
        <item>9.45-10.30</item>
        <item>10.30-11.15</item>
        <item>11.30-12.15</item>
        <item>12.15-13.00</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="addTaskMessage">Bitte fügen Sie eine neue Aufgabe hinzu!</string>
    <string-array name="color_schemes_array">
        <item>Akzentfarbe</item>
        <item>Orangetöne</item>
        <item>Blautöne</item>
        <item>Bunt</item>
    </string-array>
    <string name="key_schoolstart" translatable="false">schoolstart</string>
    <string name="newTimeTable">Stundenplan erstellen</string>
    <string name="importTimeTable">Stundenplan importieren</string>
    <string name="key_notificationTime" translatable="false">notificationTime</string>
    <string name="schoolCalendar">Schulkalender</string>
    <string name="AnnaNews">AnnaNews</string>
    <string name="loading">Es lädt...</string>
    <string name="short_blindtext" translatable="false">#!#</string>
    <string name="medium_blindtext" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="edit">Ändern</string>
    <string name="general">Allgemein</string>
    <string name="schoolstart">Schulbeginn:</string>
    <string name="settings_break_lenght">Pausenlänge (min):</string>
    <string name="settings_lesson_lenght">Stundenlänge (min)</string>
    <string name="noConnection">Keine Verbindung</string>
    <string name="timetable">Stundenplan</string>
    <string name="settings_timetable_gaps">Teiler im Stundenplan anzeigen</string>
    <string name="settings_max_lessons">Maximale Stundenanzahl</string>
    <string name="colorTheme">Farbschema:</string>
    <string name="selling_stuff">Vertretungsplan</string>
    <string name="tutoring">Nachhilfe</string>
    <string name="name">Name</string>
    <string name="warning_add_subject_before_grades">Fügen Sie bitte zuerst ein Fach hinzu bevor Sie Noten eintragen!</string>
    <string name="task">Aufgabe</string>
    <string name="grade">Note</string>
    <string name="description">Beschreibung</string>
    <string name="addEvent">Event hinzufügen</string>
    <string name="oral">mündlich</string>
    <string name="written">schriftlich</string>
    <string name="expand">Erweitert</string>
    <string name="note">Notiz</string>
    <string name="rating">Wertung</string>
    <string name="teacher">Lehrer</string>
    <string name="room">Raum</string>
    <string name="this_lesson">Diese Stunde</string>
    <string name="subject">Fach</string>
    <string name="what_edit">Was wollen Sie bearbeiten?</string>
    <string name="long_blindtext" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="dateFormat_long" translatable="false">dd.MM.yyyy</string>
    <string name="dateFormat_short" translatable="false">dd.MM</string>
    <string name="monday_short">MO</string>
    <string name="tuesday_short">Di</string>
    <string name="wednesday_short">Mi</string>
    <string name="thursday_short">Do</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">So</string>
    <string name="key_lessonTime" translatable="false">lessonTime</string>
    <string name="key_breakTime" translatable="false">breaktTime</string>
    <string name="bundleKey_colorThemePosition" translatable="false">colorSchemePosition</string>
    <string name="bundlekey_news" translatable="false">news</string>
    <string name="bundlekey_fragmentTag" translatable="false">fragmentTag</string>
    <string name="newSubject">Neues Fach</string>
    <string name="key_timetableGaps" translatable="false">timetableDividers</string>
    <string name="key_maxLesson" translatable="false">maxlessons</string>
    <string name="key_daysbeforetestnotification" translatable="false">daysBeforeTestNotification</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="lesson">Stunde</string>
    <string name="room_warning">Raum muss nur eingetragen werden falls er sich von dem für das Fach als Standard eingestellten Raum unterscheiden sollte.</string>
    <string name="name_warning">Fehler im Namen</string>
    <string name="name_warning_empty">Der Name darf nicht leer sein</string>
    <string name="name_warning_dup">Es existiert bereits ein Fach mit dem Namen \"</string>
    <string name="delete_warning_1">Wollen Sie diese Stunde wirklich löschen?</string>
    <string name="delete_warning_2_1">Wollen Sie wirklich alle </string>
    <string name="delete_warning_2_2">stunden löschen?</string>
    <string name="delete_warning_3">Wollen Sie wirklich das gesamte Fach löschen? Dies inkludiert sowohl alle Stunden, als auch sämtliche Noten und Aufgaben!</string>
    <string name="nextLesson">Nächste Stunde</string>
    <string name="next2Lesson">Übernächste Stunde</string>
    <string name="tomorrow">Morgen</string>
    <string name="nextWeek">Nächste Woche</string>
    <string name="chooseDate">Datum auswählen</string>
    <string name="homework">Hausaufgabe</string>
    <string name="exam">Schulaufgabe</string>
    <string name="addSubjectMessage">Bitte fügen Sie zuerst ein neues Fach hinzu!</string>
    <string name="dateFormat_pattern" translatable="false">\\d*\\.\\d*\\.\\d*</string>
    <string name="appRestartMessage">Bitte starten sie die App neu. Ein Fehler ist aufgetreten.</string>
    <string name="homework_short">HA</string>
    <string name="exam_short">SA</string>
    <string name="note_short">NO</string>
    <string name="noSchoolToday">Heute hast Du keine Schule!</string>
    <string name="noMailApp">Keine Mail-App gefunden!</string>
    <string name="ok">OK</string>
</resources>