<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_myday"
        android:icon="@drawable/ic_myday"
        android:title="@string/Home"
        android:iconTint="?android:textColor"
        />
    <item
        android:id="@+id/nav_timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/timetable"
        android:iconTint="?android:textColor"/>
    <item
        android:id="@+id/nav_grades"
        android:icon="@drawable/ic_grade"
        android:title="@string/grades"
        android:iconTint="?android:textColor"/>
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_task"
        android:title="@string/tasks"
        android:iconTint="?android:textColor" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/schoolCalendar"
        android:iconTint="?android:textColor" />
    <item
        android:id="@+id/nav_representationplan"
        android:icon="@drawable/ic_loststuff"
        android:title="@string/representationPlan"
        />
    <item
        android:id="@+id/nav_annanews"
        android:title="@string/AnnaNews"/>

</menu>
