<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?android:textColor"
            android:id="@+id/grade_edit_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/gradeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/grade"
            android:inputType="number"
            android:layout_marginStart="5dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:checkedButton="@+id/isNotWritten"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/isNotWritten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oral"
                android:textColor="?android:textColor" />

            <RadioButton
                android:id="@+id/isWritten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/written"
                android:textColor="?android:textColor" />

        </RadioGroup>

        <Button
            android:id="@+id/btnExtra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#00000000"
            android:text="@string/expand"
            android:textColor="?colorAccent" />

        <LinearLayout
            android:id="@+id/extraLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/note"
                android:inputType="textPersonName" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ratingInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/raiting"
                    android:inputType="numberDecimal" />

                <ImageView
                    android:id="@+id/btnRoomHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_help"
                    android:text="@string/short_blindtext" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:id="@+id/grade_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:layout_toStartOf="@+id/grade_edit_ok"
                android:background="@android:color/transparent"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/cancel"
                android:textColor="?colorAccent" />

            <Button
                android:id="@+id/grade_edit_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/ok"
                android:textColor="?colorAccent" />

        </RelativeLayout>

    </LinearLayout>
</FrameLayout>
